TP-kube-02/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: registry.gitlab.com/takima-school/images/cdb/api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "192Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "2"
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      imagePullSecrets:
      - name: takima-school-registry
